[gd_scene load_steps=4 format=3 uid="uid://cy3jx6p4m5lm7"]

[ext_resource type="Script" path="res://scripts/ui/dragon_death_popup.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://57erx6jtexcf" path="res://assets/Icons/dragons/dragon-base.tscn" id="2_dragon_visual"]
[ext_resource type="Theme" uid="uid://bo8g4sssf0ihw" path="res://themes/game_theme.tres" id="3_theme"]

[node name="DragonDeathPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupPanel" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Overlay/CenterContainer/PopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer/PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleContainer" type="VBoxContainer" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "üíÄ DRAGON LOST üíÄ"
horizontal_alignment = 1

[node name="DragonNameLabel" type="Label" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox/TitleContainer"]
layout_mode = 2
text = "Dragon Name (Level 5)"
horizontal_alignment = 1

[node name="PortraitContainer" type="CenterContainer" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="DragonVisual" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox/PortraitContainer" instance=ExtResource("2_dragon_visual")]
unique_name_in_owner = true
position = Vector2(212, 55)
scale = Vector2(0.18, 0.18)

[node name="CauseLabel" type="Label" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Cause of Death: Defeated in combat"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="PartsRecoveredLabel" type="Label" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "PARTS RECOVERED: 2/3"
horizontal_alignment = 1

[node name="PartsGrid" type="HBoxContainer" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="DecayWarning" type="Label" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.4, 1)
text = "‚è±Ô∏è These parts will decay in 24 hours"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="Overlay/CenterContainer/PopupPanel/MarginContainer/VBox/Buttons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Continue"
